Remove image-blob-reduce, use pica instead. Extract configuration variables into .env file. Fix minor alignment issue with the submit button.

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,13 +29,15 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 20px;
-    display: block;
     width: 100%;
     background-color: #F26D91;
     padding: 8px;
     border: none;
     cursor: pointer;
     color: #0D0000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover {
       background-color: darken(#F26D91, 10%);
     }
@@ -169,12 +171,6 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
     margin-bottom: 16px;
-    .vkw-preview:nth-child(1),
-    .vkw-preview:nth-child(2),
-    .vkw-preview:nth-child(3),
-    .vkw-preview:nth-child(4) {
-      display: block;
-    }
     @media (max-width: 767px) {
       grid-template-columns: repeat(2, 1fr);
     }
@@ -206,7 +202,7 @@
 .vkw-preview {
   position: relative;
   z-index: 2;
-  display: none;
+  display: block;
   &__image {
     display: block;
     aspect-ratio: 1 / 1;
